Fix alignment for error messges in cart drawer

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -395,7 +395,11 @@ cart-drawer-items::-webkit-scrollbar-track-piece {
 }
 
 @media screen and (min-width: 750px) {
-  .cart-drawer .quantity-popover__info-button--icon-with-label {
+  .cart-drawer .cart-item__quantity--info quantity-popover > * {
     padding-left: 0;
+  }
+
+  .cart-drawer .cart-item__error {
+    margin-left: 0;
   }
 }
